unpackaged/main/default/objects/ServiceContract/fields/Anyware_Term__c.field-meta.xml
<CustomField>
    <fullName>Anyware_Term__c</fullName>
    <description>9/18 SH: Part of the Agreement conversion to Service Contract</description>
    <label>Anyware Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>