unpackaged/main/default/objects/ServiceContract/fields/Boomi_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Boomi_Billing_Contact__c</fullName>
    <label>Boomi Billing Contact</label>
    <length>55</length>
    <type>Text</type>
</CustomField>