unpackaged/main/default/objects/ServiceContract/fields/CW_Agreement_ID__c.field-meta.xml
<CustomField>
    <fullName>CW_Agreement_ID__c</fullName>
    <label>CW Agreement ID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>