unpackaged/main/default/objects/ServiceContract/fields/Last_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Date__c</fullName>
    <description>9/13 SH: Part of the Agreement conversion to Service Contract</description>
    <label>Last Invoice Date</label>
    <type>Date</type>
</CustomField>