unpackaged/main/default/objects/ServiceContract/fields/Last_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Number__c</fullName>
    <description>9/13 SH: Part of the Agreement conversion to Service Contract</description>
    <label>Last Invoice Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>