unpackaged/main/default/objects/ServiceContract/fields/Next_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Next_Invoice_Amount__c</fullName>
    <description>9/13 SH: Part of the Agreement conversion to Service Contract</description>
    <label>Next Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>