unpackaged/main/default/objects/ServiceContract/fields/Remaining_Liability__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Liability__c</fullName>
    <description>9/18 SH: Part of the Agreement conversion to Service Contract</description>
    <label>Remaining Liability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>