unpackaged/main/default/objects/ServiceContract/fields/Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code__c</fullName>
    <description>9/13 SH: Part of the Agreement conversion to Service Contract</description>
    <label>Tax Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>